# Desafio-Langflow

./: .gitignore  README.md
Rote-ia/: README.md  docker-compose.yaml  env.example  webui_rote_ia_v2.json
Rote-ia/Flow/: Comercial.json  Financeiro.json  Rote.ia.json  Router_flow.json  Suporte.json
Rote-ia/open-webui/_data/: webui.db
Rote-ia/open-webui/_data/cache/embedding/models/models--sentence-transformers--all-MiniLM-L6-v2/refs/: main
Rote-ia/open-webui/_data/cache/embedding/models/models--sentence-transformers--all-MiniLM-L6-v2/snapshots/8b3219a92973c328a8e22fadcfa821b5dc75636a/: README.md  config_sentence_transformers.json  model.safetensors  modules.json  sentence_bert_config.json
Rote-ia/open-webui/_data/cache/embedding/models/models--sentence-transformers--all-MiniLM-L6-v2/snapshots/8b3219a92973c328a8e22fadcfa821b5dc75636a/1_Pooling/: config.json
Rote-ia/open-webui/_data/vector_db/: chroma.sqlite3
Skynet-API/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  readme.md  skynet.md
Skynet-API/data/: atendentes.csv  chamados.csv  clientes.csv  contratos.csv  faturas.csv  historico_atendimento.csv  pagamentos.csv  planos.csv
Skynet-API/db/: Skynet.db
Skynet-API/notebook/: skynet.ipynb
Skynet-API/sql/: create_database.sql  create_views.sql  queries.sql
Skynet-API/src/: app.py
Skynet-API/src/utils/: criar_bd.py  gerar_dados.py  load_data.py  remove_zone_identifier.sh  view_client_info.py
