[tool.poetry]
name = "crm-skynet-provider-sqlite-fastapi"
version = "0.1.0"
description = "\"Sistema CRM para a Skynet Provider usando SQLite e FastAPI\""
authors = ["Julio Okuda <julio.okuda@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
lab = "^8.2"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
isort = "^5.13.2"
blue = "^0.9.1"
pydocstyle = "^6.3.0"
taskipy = "^1.13.0"
mkdocs = "^1.6.1"
pip-audit = "^2.7.3"
mkdocstrings-python = "^1.11.1"
pygments = "^2.18.0"
mkdocs-material = "^9.5.34"
pymdown-extensions = "^10.9"
fastapi = "^0.113.0"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "isort .&&blue .&&pydocstyle" # script para rodar isort, blue e pydostyle juntos
